2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* CADLayer.wrl: 

2014-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv:
	* SpiderMonkey-Inline.x3dv: 

2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Smash.x3dv:
	* QuadSphere.wrl:
	* SpiderMonkey.x3dv:
	* SpiderMonkey-Inline.x3dv: 

2014-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Anchor.wrl: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* CADLayer.wrl: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Viewpoint.wrl: 

2014-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Dimmly.x3dv:
	* Normal.x3dv:
	* Tunnel.wrl: 

2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* GeoViewpoint3.3.x3dv: 
