@@ -1,15 +1,18 @@
-#VRML V2.0 utf8 Titania
+#VRML V2.0 utf8 Titania V0.7.4
 
 META "title" "Default Extrusion"
 
-Viewpoint {}
+Viewpoint { }
 
 Transform {
   children Shape {
     appearance Appearance {
       material Material { }
     }
-    geometry Extrusion {
-    }
+    geometry Extrusion { }
   }
+}
+
+DEF Gray_1 Background {
+  skyColor 0.2 0.2 0.2
 }
