@@ -1,80 +1,85 @@
-#VRML V2.0 utf8 CosmoWorlds V1.0
+#VRML V2.0 utf8 Titania V0.7.4
 
 Group {
-  children	  Group {
-    children	[
+  children Group {
+    children [
       Transform {
-	children	Shape {
-	  appearance	Appearance {
-	    material	Material {
-	    }
-
-	  }
-
-	  geometry	Extrusion {
-	    convex	FALSE
-	    creaseAngle	0.785399
-	    crossSection	[ -0.35883 3.13699e-08,
-		      -0.45375 -0.0902568,
-		      -0.719829 -0.298162,
-		      -0.493548 -0.329777,
-		      -0.286799 -0.286799,
-		      -0.187813 -0.281084,
-		      -0.123254 -0.297562,
-		      -0.0653196 -0.328384,
-		      2.43543e-08 -0.322582,
-		      0.0684329 -0.344034,
-		      0.168703 -0.407285,
-		      0.391043 -0.585237,
-		      0.454852 -0.454852,
-		      0.350861 -0.234438,
-		      0.317707 -0.131597,
-		      0.315757 -0.062808,
-		      0.34 2.97237e-08,
-		      0.315757 0.0628081,
-		      0.317707 0.131597,
-		      0.350861 0.234438,
-		      0.454852 0.454854,
-		      0.391043 0.585237,
-		      0.168703 0.407285,
-		      0.0684329 0.344034,
-		      -1.41006e-08 0.322582,
-		      -0.0653197 0.328384,
-		      -0.123254 0.297562,
-		      -0.187813 0.281084,
-		      -0.286799 0.286799,
-		      -0.493546 0.329777,
-		      -0.719829 0.298162,
-		      -0.45375 0.0902568,
-		      -0.35883 -3.13699e-08 ]
-	    orientation	[ 0 0 1  0,
-		      0 0 1  0 ]
-	    scale	[ 1 1,
-		      1 1 ]
-	    solid	FALSE
-	    spine	[ 0.605477 -1.21326 0.0496808,
-		      0.368728 -0.658998 -0.962759,
-		      0.191737 -0.121304 -1.49327,
-		      0.0745083 0.399816 -1.54185,
-		      0.0170381 0.904368 -1.10851,
-		      0.0193279 1.39235 -0.193229,
-		      -0.0144363 1.84505 0.751505,
-		      -0.180068 2.24377 1.27323,
-		      -0.477568 2.5885 1.37193,
-		      -0.906935 2.87924 1.04763,
-		      -1.46817 3.11599 0.300307 ]
-	  }
-
-	}
-
-	translation	0.453438 -1.05497 -0.220753
+        translation 0.453438 -1.05497 -0.220753
+        children Shape {
+          appearance Appearance {
+            material Material { }
+          }
+          geometry Extrusion {
+            ccw FALSE
+            convex FALSE
+            creaseAngle 0.785399
+            crossSection [
+              -0.35883 3.13699e-08,
+              -0.45375 -0.0902568,
+              -0.719829 -0.298162,
+              -0.493548 -0.329777,
+              -0.286799 -0.286799,
+              -0.187813 -0.281084,
+              -0.123254 -0.297562,
+              -0.0653196 -0.328384,
+              2.43543e-08 -0.322582,
+              0.0684329 -0.344034,
+              0.168703 -0.407285,
+              0.391043 -0.585237,
+              0.454852 -0.454852,
+              0.350861 -0.234438,
+              0.317707 -0.131597,
+              0.315757 -0.062808,
+              0.34 2.97237e-08,
+              0.315757 0.0628081,
+              0.317707 0.131597,
+              0.350861 0.234438,
+              0.454852 0.454854,
+              0.391043 0.585237,
+              0.168703 0.407285,
+              0.0684329 0.344034,
+              -1.41006e-08 0.322582,
+              -0.0653197 0.328384,
+              -0.123254 0.297562,
+              -0.187813 0.281084,
+              -0.286799 0.286799,
+              -0.493546 0.329777,
+              -0.719829 0.298162,
+              -0.45375 0.0902568,
+              -0.35883 -3.13699e-08
+            ]
+            orientation [
+              0 0 1 0,
+              0 0 1 0
+            ]
+            scale [
+              1 1,
+              1 1
+            ]
+            spine [
+              0.605477 -1.21326 0.0496808,
+              0.368728 -0.658998 -0.962759,
+              0.191737 -0.121304 -1.49327,
+              0.0745083 0.399816 -1.54185,
+              0.0170381 0.904368 -1.10851,
+              0.0193279 1.39235 -0.193229,
+              -0.0144363 1.84505 0.751505,
+              -0.180068 2.24377 1.27323,
+              -0.477568 2.5885 1.37193,
+              -0.906935 2.87924 1.04763,
+              -1.46817 3.11599 0.300307
+            ]
+          }
+        }
       }
       DEF Viewpoint1 Viewpoint {
-	position	-4.49511 -6.29794 5.99509
-	orientation	-0.432331 -0.202785 0.878617  3.93826
-	fieldOfView	0.785398
+        position -4.49511 -6.29794 5.99509
+        orientation -0.432331 -0.202785 0.878617 3.93826
       }
     ]
   }
+}
 
+DEF Gray_1 Background {
+  skyColor 0.2 0.2 0.2
 }
