@@ -4,7 +4,7 @@ META "comment" "World of Titania"
 META "created" "Mon, 06 Oct 2014 01:06:09 GMT"
 META "creator" "Holger Seelig"
 META "generator" "Titania V0.7.4, http://titania.create3000.de"
-META "modified" "Thu, 09 Oct 2014 07:32:01 GMT"
+META "modified" "Thu, 09 Oct 2014 07:36:49 GMT"
 
 EXTERNPROTO Torus [
   inputOutput    SFFloat minorRadius
@@ -97,9 +97,9 @@ DEF Gray_1 Background {
 
 Viewpoint {
   description "Home"
-  position -1.10338 -8.09269 1.4748
-  orientation -0.82298 -0.253963 -0.50814 5.24467
-  centerOfRotation -2.48276 -5.99639 -0.586098
+  position 5.05138 -5.31839 12.8305
+  orientation -0.0307864 -0.969785 -0.242011 5.98163
+  centerOfRotation 0.678269 -5.34033 -1.69049
 }
 
 DEF Box_1 Transform {
@@ -488,7 +488,7 @@ Transform {
 }
 
 DEF Edge_1 Transform {
-  translation -2 -6 -2.20482e-05
+  translation -2 -6 0.999978
   scale 0.319951 0.319951 0.319951
   children Shape {
     appearance Appearance {
@@ -617,7 +617,7 @@ DEF Torus Transform {
   }
 }
 
-DEF _4 Transform {
+Transform {
   translation 6 -6 -2.20482e-05
   children Shape {
     appearance Appearance {
@@ -653,7 +653,7 @@ DEF _4 Transform {
   }
 }
 
-DEF _5 Transform {
+Transform {
   translation 9 -6 -2.20482e-05
   children Shape {
     appearance Appearance {
