@@ -1,5 +1,12 @@
 2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* wrong2.wrl:
+	* Smash.x3dv:
+	* Extrusion.wrl:
+	* wrong2-1-ok.wrl: 
+
+2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Smash.x3dv: 
 
 2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>
